[package]
name = "bevy_stdout"
version = "0.1.0"
edition = "2021"


[dependencies]
# crossterm = "0.27.0"
# bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy = { version = "0.13", features = ["dynamic_linking"] }

console_window = { path = "../console_window/" }
anyhow = "1.0"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

