[package]
name = "bevy_stdout"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"

# bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy = { version = "0.13", features = ["dynamic_linking"] }

# console_window = { path = "../console_window/" }
console_window = { git = "https://github.com/AlexanderARodin/console_window.git", branch="dev" }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

